[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image/images_faculdade/atividade_Fundos.png" type="Texture" id=1]
[ext_resource path="res://Image/images_faculdade/Confirma.png" type="Texture" id=2]
[ext_resource path="res://Faculdade/Scripts/atividade_Fundos.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 197.0
margin_right = 486.0
margin_bottom = 229.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 495.0
margin_top = 197.0
margin_right = 586.0
margin_bottom = 229.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 394.0
margin_top = 291.0
margin_right = 485.0
margin_bottom = 322.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 495.0
margin_top = 291.0
margin_right = 586.0
margin_bottom = 322.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 394.0
margin_top = 391.0
margin_right = 485.0
margin_bottom = 423.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 391.0
margin_right = 584.0
margin_bottom = 423.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 194.0
margin_right = 659.0
margin_bottom = 234.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 618.0
margin_top = 287.0
margin_right = 658.0
margin_bottom = 327.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 618.0
margin_top = 387.0
margin_right = 658.0
margin_bottom = 427.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 619.0
margin_top = 193.0
margin_right = 659.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 618.0
margin_top = 287.0
margin_right = 658.0
margin_bottom = 327.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 618.0
margin_top = 387.0
margin_right = 658.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acertos" type="Label" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 566.0
margin_top = 534.0
margin_right = 600.0
margin_bottom = 565.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 699.0
margin_top = 21.0
margin_right = 729.0
margin_bottom = 50.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p1" to="." method="_on_resposta1_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p1" to="." method="_on_resposta2_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p2" to="." method="_on_resposta1_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p2" to="." method="_on_resposta2_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p3" to="." method="_on_resposta1_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p3" to="." method="_on_resposta2_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/voltar" to="." method="_on_voltar_pressed"]
